Remove user tags table + make progress on updating AZS

--- a/m4d/Views/Tag/Index.cshtml
+++ b/m4d/Views/Tag/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model IEnumerable<TagType>
+﻿@model IEnumerable<TagType>
 
 @{
     ViewBag.Title = "Tag Cloud";
@@ -9,65 +9,67 @@
 
 @Html.Partial("_TagCloud",TagType.ToTagCounts(Model))
 
-@if (User.IsInRole("canEdit"))
-{
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Key)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Count)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Primary.PrimaryId)
-            </th>
-            <th>
-                Ring
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            var item1 = item;
+@*
+    @if (User.IsInRole("canEdit"))
+    {
+        <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
+        <table class="table">
             <tr>
-                <td>
-                    @Html.ActionLink(item.Key, "tags", "song", new {tags = item.Key}, null)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item1.Count)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item1.PrimaryId)
-                </td>
-                <td>
-                    @if (item.Ring != null && item.Ring.Count > 0)
-                    {
-                        var separator = "";
-                        foreach (var child in item.Ring)
-                        {
-                            @separator
-                            @child.Key
-                            separator = ",";
-                        }
-                    }
-                </td>
-
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.EncodedKey}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.EncodedKey}) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.EncodedKey})
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Key)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Count)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Primary.PrimaryId)
+                </th>
+                <th>
+                    Ring
+                </th>
+                <th></th>
             </tr>
-        }
-    </table>
-}
+
+            @foreach (var item in Model)
+            {
+                var item1 = item;
+                <tr>
+                    <td>
+                        @Html.ActionLink(item.Key, "tags", "song", new {tags = item.Key}, null)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item1.Count)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item1.PrimaryId)
+                    </td>
+                    <td>
+                        @if (item.Ring != null && item.Ring.Count > 0)
+                        {
+                            var separator = "";
+                            foreach (var child in item.Ring)
+                            {
+                                @separator
+                                @child.Key
+                                separator = ",";
+                            }
+                        }
+                    </td>
+
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new {id = item.EncodedKey}) |
+                        @Html.ActionLink("Details", "Details", new {id = item.EncodedKey}) |
+                        @Html.ActionLink("Delete", "Delete", new {id = item.EncodedKey})
+                    </td>
+                </tr>
+            }
+        </table>
+    }
+*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/knockout")
     @Scripts.Render("~/bundles/musicservice")
-}*@
+}
