--- a/m4d/Views/Tag/Index.cshtml
+++ b/m4d/Views/Tag/Index.cshtml
@@ -9,65 +9,63 @@
 
 @Html.Partial("_TagCloud",TagType.ToTagCounts(Model))
 
-@*
-    @if (User.IsInRole("canEdit"))
-    {
-        <p>
-            @Html.ActionLink("Create New", "Create")
-        </p>
-        <table class="table">
+@if (User.IsInRole("showDiagnostics"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Key)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Count)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Primary.PrimaryId)
+            </th>
+            <th>
+                Ring
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            var item1 = item;
             <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Key)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Count)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Primary.PrimaryId)
-                </th>
-                <th>
-                    Ring
-                </th>
-                <th></th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
-                var item1 = item;
-                <tr>
-                    <td>
-                        @Html.ActionLink(item.Key, "tags", "song", new {tags = item.Key}, null)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item1.Count)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item1.PrimaryId)
-                    </td>
-                    <td>
-                        @if (item.Ring != null && item.Ring.Count > 0)
+                <td>
+                    @Html.ActionLink(item.Key, "tags", "song", new {tags = item.Key}, null)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item1.Count)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item1.PrimaryId)
+                </td>
+                <td>
+                    @if (item.Ring != null && item.Ring.Count > 0)
+                    {
+                        var separator = "";
+                        foreach (var child in item.Ring)
                         {
-                            var separator = "";
-                            foreach (var child in item.Ring)
-                            {
-                                @separator
-                                @child.Key
-                                separator = ",";
-                            }
+                            @separator
+                            @child.Key
+                            separator = ",";
                         }
-                    </td>
+                    }
+                </td>
 
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.EncodedKey}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.EncodedKey}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.EncodedKey})
-                    </td>
-                </tr>
-            }
-        </table>
-    }
-*@
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new {id = item.EncodedKey}) |
+                    @Html.ActionLink("Details", "Details", new {id = item.EncodedKey}) |
+                    @Html.ActionLink("Delete", "Delete", new {id = item.EncodedKey})
+                </td>
+            </tr>
+        }
+    </table>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/knockout")
