DBKill: Refactor TagType into TagGroup and get TagGroup editing working.

--- a/m4d/App_Code/TagHelpers.cshtml
+++ b/m4d/App_Code/TagHelpers.cshtml
@@ -57,7 +57,7 @@
     var tc = tag.TagClass;
     tc = tc?.ToLower() ?? "other";
 
-    var img = "/Content/" + TagType.ClassToName(tc) + "-50.png";
+    var img = "/Content/" + TagGroup.ClassToName(tc) + "-50.png";
     var title = (song == null) ? string.Empty : song.Title;
     var artist = (song == null) ? string.Empty : song.Artist;
 
