--- a/m4d/Views/Tag/Create.cshtml
+++ b/m4d/Views/Tag/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TagType
+﻿@model TagGroup
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>TagType</h4>
+        <h4>TagGroup</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -20,14 +20,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Key, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Key, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Count, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Count, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Count, "", new { @class = "text-danger" })
             </div>
         </div>
 
