--- a/m4d/Views/Tag/Delete.cshtml
+++ b/m4d/Views/Tag/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TagType
+﻿@model TagGroup
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TagType</h4>
+    <h4>TagGroup</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
