--- a/m4d/Views/Tag/Details.cshtml
+++ b/m4d/Views/Tag/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TagType
+﻿@model TagGroup
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>TagType</h4>
+    <h4>TagGroup</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -17,15 +17,6 @@
         <dd>
             @Html.DisplayFor(model => model.PrimaryId)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Count)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Count)
-        </dd>
-
     </dl>
 </div>
 <p>
