--- a/m4d/Views/Tag/Edit.cshtml
+++ b/m4d/Views/Tag/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TagType
+﻿@model TagGroup
 
 @{
     ViewBag.Title = "Edit";
@@ -12,32 +12,15 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>TagType</h4>
+        <h4>TagGroup</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Key)
 
-        @*@if (Model.Ring != null)
-        {
-            int i = 0;
-            foreach (var child in Model.Ring)
-            {
-                @Html.Hidden(string.Format("Ring[{0}].Key",i), child.Key);
-                i += 1;
-            }
-        }*@
         <div class="form-group">
             @Html.Label("Key", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.Editor("NewKey", new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Count, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Count, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Count, "", new { @class = "text-danger" })
             </div>
         </div>
 
