DBKill: Round of bug fixes for tag editng

--- a/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -144,7 +144,7 @@
                     <label class="control-label search-label">Include tags:</label>
                 </div>
                 <div class="col-sm-9">
-                    <span data-bind="template: {name:'tag-template',foreach:includeTags.TagSummary.tagGroups}"></span>
+                    <span data-bind="template: {name:'tag-template',foreach:includeTags.TagSummary.tagTypes}"></span>
                 </div>
             </div>
             <div class="form-group">
@@ -152,7 +152,7 @@
                     <label class="control-label search-label">Exclude tags:</label>
                 </div>
                 <div class="col-sm-9">
-                    <span data-bind="template: {name:'tag-template',foreach:excludeTags.TagSummary.tagGroups}"></span>
+                    <span data-bind="template: {name:'tag-template',foreach:excludeTags.TagSummary.tagTypes}"></span>
                 </div>
             </div>
 
