--- a/m4d/Views/Song/Dances.cshtml
+++ b/m4d/Views/Song/Dances.cshtml
@@ -15,7 +15,7 @@
         </span>
         &nbsp;
         <a role="button" class="btn btn-small btn-info" style="padding: 2px" data-show="tooltip" data-placement="top" data-bind="attr: {'data-original-title':liketip},  visible:canTag"><img data-bind="click:toggleVote, attr: {src:voteImage, 'alt':voteName}" /></a>
-        <span style="font-size: 18px" data-bind="template: {name:'tag-template',foreach:TagSummary.tagGroups}"></span>
+        <span style="font-size: 18px" data-bind="template: {name:'tag-template',foreach:TagSummary.tagTypes}"></span>
     </li>
 </script>
 
