--- a/m4d/Views/Song/DetailsCore.cshtml
+++ b/m4d/Views/Song/DetailsCore.cshtml
@@ -103,7 +103,7 @@
     <div class="row">
         <div class="col-md-12">
             <h4>
-                <span data-bind="template: {name:'tag-template',foreach:song.TagSummary.tagGroups}"></span>
+                <span data-bind="template: {name:'tag-template',foreach:song.TagSummary.tagTypes}"></span>
             </h4>
         </div>
     </div>
