DBKill: A couple of fixes to tag timestamping + incremental backup

--- a/m4d/Views/Tag/Delete.cshtml
+++ b/m4d/Views/Tag/Delete.cshtml
@@ -12,6 +12,13 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Key)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Key)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Primary.PrimaryId)
         </dt>
 
