Couple of quick fixes

--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -70,7 +70,7 @@
         <input type="file" name="FileUpload"/>
         <input type="hidden" name="reset" id="reset" value="false"/>
         <br />
-        <input type="submit" name="idxName" id="basica" value="basicb" />
+        <input type="submit" name="idxName" id="basica" value="basica" />
         <input type="submit" name="idxName" id="basicb" value="basicb" />
         <input type="submit" name="idxName" id="basicc" value="basicc" />
     }
