--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -37,7 +37,8 @@
             @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter, type = "I", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter, type = "S", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter, type = "A", count = 10 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 10, options = "M" }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 10}, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical (R)", "BatchMusicService", new { filter, type = "-", count = 10, options = "R" }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Clean Services", "BatchCleanService", new { filter, count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Backup List", "BackupTail", "Admin", new { filter, count = -1 }, new { @class = "btn btn-default", role = "button" })
             @Html.ActionLink("JSON", "BackupJson", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
