--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -38,6 +38,7 @@
             @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter, type = "S", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter, type = "A", count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 10}, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical (S)", "BatchMusicService", new { filter, type = "-", count = 10, options = "S" }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Canonical (R)", "BatchMusicService", new { filter, type = "-", count = 10, options = "R" }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Clean Services", "BatchCleanService", new { filter, count = 10 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Backup List", "BackupTail", "Admin", new { filter, count = -1 }, new { @class = "btn btn-default", role = "button" })
@@ -45,8 +46,8 @@
             @Html.ActionLink("Update User Tags", "RebuildUserTags", "Admin", new { filter, update = true }, new { @class = "btn btn-default", role = "button" })
             @Html.ActionLink("Update Tags", "RebuildTags", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
             @Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("Echo Batch", "BatchEchoNest", new { filter, count = 10 }, new { @class = "btn btn-warning", role = "button" })
-            @Html.ActionLink("Sample Batch", "BatchSamples", new { filter, count = 10 }, new { @class = "btn btn-warning", role = "button" })
+            @Html.ActionLink("Echo Batch", "BatchEchoNest", new { filter, count = 1000 }, new { @class = "btn btn-warning", role = "button" })
+            @Html.ActionLink("Sample Batch", "BatchSamples", new { filter, count = 1000 }, new { @class = "btn btn-warning", role = "button" })
         </div>
     }
 }
