--- a/m4d/Views/Admin/Scraping.cshtml
+++ b/m4d/Views/Admin/Scraping.cshtml
@@ -28,4 +28,5 @@
     <li>@Html.ActionLink("DWTS", "ScrapeDances", new { id = "dwts" })</li>
     <li>@Html.ActionLink("WDW", "ScrapeDances", new { id = "WDW" })</li>
     <li>@Html.ActionLink("***REMOVED***", "ScrapeDances", new { id = "WW", parameter="Last Dance" })</li>
+    <li>@Html.ActionLink("***REMOVED***", "ScrapeDances", new { id = "georgewendy"})</li>
 </ul>
