--- a/m4d/Views/Song/Merge.cshtml
+++ b/m4d/Views/Song/Merge.cshtml
@@ -120,7 +120,7 @@
             @{i = 0;}
             @foreach (var item in Model.Songs)
             {
-                <td>@Html.Partial("SongItems", item.Properties.OrderBy(sp => sp.Id))</td>
+                <td>@Html.Partial("SongItems", item.SongProperties)</td>
                 i = i + 1;
             }
         </tr>
