Get auto-merge working

--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -45,9 +45,11 @@
 <h3>Search Index: @ViewBag.SearchIdx</h3>
 <p>Source = @ViewBag.StatsUpdateSource, Time=@ViewBag.StatsUpdateTime</p>
 <ul>
-    <li>@Html.ActionLink("basica", "SetSearchIdx", "Admin", new {id = "basica"}, null)</li>
-    <li>@Html.ActionLink("basicb", "SetSearchIdx", "Admin", new {id = "basicb"}, null)</li>
-    <li>@Html.ActionLink("basicc", "SetSearchIdx", "Admin", new {id = "basicc"}, null)</li>
+    @foreach (var id in SearchServiceInfo.GetAvailableIds())
+    {
+        if (SearchServiceInfo.DefaultId == id) { continue; }
+        <li>@Html.ActionLink(id, "SetSearchIdx", "Admin", new { id }, null)</li>
+    }
     <li>Enviroment: @SearchServiceInfo.RawEnvironment</li>
 </ul>
 
