--- a/m4d/Views/Shared/_LoginPartial.cshtml
+++ b/m4d/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,18 @@
 ﻿@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
+    var modifier = "";
+    if (User.IsInRole("showDiagnostics"))
+    {
+        modifier = "(" + SearchServiceInfo.DefaultId.Last() + ")";
+    }
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> @User.Identity.GetUserName() <img src="~/Content/swing-ui.png" alt="User Icon" height="30" width="30" />
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> @(User.Identity.GetUserName() + modifier) <img src="~/Content/swing-ui.png" alt="User Icon" height="30" width="30" />
                     &nbsp;&nbsp;&nbsp;&nbsp;
                 </a>
                 <ul class="dropdown-menu" role="menu">
