Several small changes: Allow loading of sections of the sitemap from a file - and do this for blog entries Enable a new sort order button - "Closest Match" and wire that through as the default Fix the reset button on the advanced search page so that it is a reset rather than submit.

--- a/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/m4d/Views/Admin/InitializationTasks.cshtml
@@ -24,6 +24,7 @@
             <li>@Html.ActionLink("Recompute Dance Stats", "RebuildDances")</li>
         </ul>
     </li>
+    <li>@Html.ActionLink("Update Sitemap", "UpdateSitemap")</li>
 </ul>
 
 <h3>Clean Up</h3>
