--- a/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -62,7 +62,7 @@
         label = name;
     }
     <label class="form-inline" style="font-weight:normal; margin-right:1.5em">
-        <input type="radio" name="sortOrder" value="@name" @(string.Equals(sort.Id, name, StringComparison.OrdinalIgnoreCase) ? "checked" : string.Empty)> @label
+        <input type="radio" name="sortOrder" value="@name" @(string.Equals(sort.Id, name, StringComparison.OrdinalIgnoreCase) || (name == "Closest Match" && string.IsNullOrWhiteSpace(sort.Id)) ? "checked" : string.Empty)> @label
     </label>
 }
 
@@ -199,6 +199,7 @@
                     @SortOrder("Energy", filter.SortOrder)
                     @SortOrder("Mood", filter.SortOrder)
                     @SortOrder("Beat", filter.SortOrder, "Strength of Beat")
+                    @SortOrder("Closest Match", filter.SortOrder)
                 </div>
                 <div class="col-sm-offset-2 col-sm-9">
                     <label class="form-inline" style="font-weight:normal; margin-right: 1.5em">
@@ -217,7 +218,7 @@
             <div class="form-group">
                 <div class="col-xs-2">
                     <span class="input-group-btn">
-                        <button id="reset-search" class="btn btn-default" type="submit">Reset</button>
+                        <button id="reset-search" class="btn btn-default" type="reset">Reset</button>
                     </span>
                 </div>
                 <div class="col-xs-offset-9">
