--- a/m4d/Views/Admin/Scraping.cshtml
+++ b/m4d/Views/Admin/Scraping.cshtml
@@ -11,9 +11,9 @@
 <h3>Scrape Spotify</h3>
 @using (Html.BeginForm("ScrapeSpotify", "Admin", FormMethod.Get))
 {
-    <span>User: </span><input type="text" name="user" value="SpotCharles" /><br />
+    <span>User: </span><input type="text" name="user" value="JoyM" /><br />
     <span>Url: </span><input type="text" name="url" value="https://open.spotify.com/user/113231003/playlist/1tUHw7s4bfRVbPdHo6ut7D" />
-    <span>Dances: </span><input type="text" name="dances" value="CST" />
+    <span>Dances: </span><input type="text" name="dances" />
     <span>Song Tags: </span><input type="text" name="songTags"/>
     <span>Dance Tags: </span><input type="text" name="danceTags" />
     <input type="submit" value="Scrape" />
