--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -33,14 +33,15 @@
             <input type="submit" name="action" value="Delete" class="btn" />
             <input type="submit" name="action" value="CleanupAlbums" class="btn" />
             @Html.ActionLink("Add New Song", "Create", null, new { @class = "btn btn-default", role = "button" })
-            @Html.ActionLink("Groove Batch", "BatchMusicService", new { filter, type = "X", count = 10 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter, type = "I", count = 10 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter, type = "S", count = 10 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter, type = "A", count = 10 }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 10}, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical (S)", "BatchMusicService", new { filter, type = "-", count = 10, options = "S" }, new { @class = "btn btn-success", role = "button" })
-            @Html.ActionLink("Canonical (R)", "BatchMusicService", new { filter, type = "-", count = 10, options = "R" }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Groove Batch", "BatchMusicService", new { filter, type = "X", count = 50 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("ITunes Batch", "BatchMusicService", new { filter, type = "I", count = 50 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Spotify Batch", "BatchMusicService", new { filter, type = "S", count = 50 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Amazon Batch", "BatchMusicService", new { filter, type = "A", count = 50 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical Batch", "BatchMusicService", new { filter, type = "-", count = 50 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical (S)", "BatchMusicService", new { filter, type = "-", count = 50, options = "S" }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Canonical (R)", "BatchMusicService", new { filter, type = "-", count = 50, options = "R" }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Clean Services", "BatchCleanService", new { filter, count = -1 }, new { @class = "btn btn-success", role = "button" })
+            @Html.ActionLink("Clear Update", "BatchClearUpdate", new { filter, count = -1 }, new { @class = "btn btn-success", role = "button" })
             @Html.ActionLink("Backup List", "BackupTail", "Admin", new { filter, count = -1 }, new { @class = "btn btn-default", role = "button" })
             @Html.ActionLink("JSON", "BackupJson", "Admin", new { filter }, new { @class = "btn btn-default", role = "button" })
             @Html.ActionLink("Update User Tags", "RebuildUserTags", "Admin", new { filter, update = true }, new { @class = "btn btn-default", role = "button" })
