--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -20,6 +20,7 @@
     <li>@Html.ActionLink("Upload Catalog (Ithaca)", "UploadCatalog", new { separator = "ITC", headers = "TEMPO,TITLE,ARTIST", user = "ithaca" })</li>
     <li>@Html.ActionLink("Upload Catalog (DWTS)", "UploadCatalog", new { separator = @"\t", headers = "DANCERS,DANCE,TITLE+ARTIST", user = "dwts", tags = "Episode 5:Other|Season 20:Other|United States:Other|DWTS:Other" })</li>
     <li>@Html.ActionLink("Upload Catalog (Paul)", "UploadCatalog", new { separator = @"\t", headers = "Dance,Rating,Title,BPM,Length,Artist,Comment", user = "paul" })</li>
+    <li>@Html.ActionLink("Upload Catalog (Rhett)", "UploadCatalog", new { separator = @"\t", headers = "Title,Artist,Album,Track,Length,SongTags,MultiDance", user = "rhettbot" })</li>
     <li>@Html.ActionLink("Upload Album", "UploadCatalog", new { headers = "Title", separator = @"\t" })</li>
 
     <hr />
