--- a/m4d/Views/Account/_WhySignUp.cshtml
+++ b/m4d/Views/Account/_WhySignUp.cshtml
@@ -7,12 +7,12 @@
     <li><span class="glyphicon glyphicon-search"></span> <a href="https://www.music4dance.net/blog/music4dance-help/advanced-search/">Search on songs you've tagged</a></li>
     <li><span class="glyphicon glyphicon-heart"></span> <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">Like and unlike songs</a></li>
     <li><span class="glyphicon glyphicon-remove"></span> <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">Hide songs you've "unliked"</a></li>
-    <li><span class="glyphicon glyphicon-file"></span>Save your searches</li>
-    <li>
+    <li><span class="glyphicon glyphicon-file"></span><a href="https://www.music4dance.net/blog/music4dance-help/saved-searches/">Save your searches</a></li>
+    @*<li>
         <span class="glyphicon glyphicon-pushpin"></span> Set defaults (coming soon)
         <ul class="list-clean">
             <li><span class="glyphicon glyphicon-list"></span> Number of songs per page</li>
             <li><span class="glyphicon glyphicon-th"></span> Customize the columns in search results</li>
         </ul>
-    </li>
+    </li>*@
 </ul>
