--- a/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/m4d/Views/Admin/InitializationTasks.cshtml
@@ -13,6 +13,7 @@
     <li>BasicA: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "basica" }, null)</li>
     <li>BasicB: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "basicb" }, null)</li>
     <li>BasicC: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "basicc" }, null)</li>
+    <li>Backup: @Html.ActionLink("Reset", "ResetSearchIdx", new { id = "backup" }, null)</li>
 </ul>
 
 <h3> Initializiation Tasks</h3>
