--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -64,6 +64,7 @@
         <input type="submit" name="idxName" id="basica" value="basica" />
         <input type="submit" name="idxName" id="basicb" value="basicb" />
         <input type="submit" name="idxName" id="basicc" value="basicc" />
+        <input type="submit" name="idxName" id="backup" value="backup" />
     }
 
     <h3>Update the Index</h3>
@@ -75,7 +76,8 @@
         <br />
         <input type="submit" name="idxName" id="basica" value="basica" />
         <input type="submit" name="idxName" id="basicb" value="basicb" />
-        <input type="submit" name="idxName" id="basicc" value="basicc" />
+        <input type="submit" name="idxName" id="basicc" value="basicc"/>
+        <input type="submit" name="idxName" id="backup" value="backup" />
     }
 
     <hr />
