--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -69,7 +69,7 @@
                     <input type="hidden" name="dances" id="dances" value="@filter.Dances" />
                     <input type="hidden" name="filter" id="filter" value="@filter.ToString()" />
                     <input type="hidden" name="tags" id="tags" />
-                    @html.TextBox("SearchString", filter.SearchString, new { @class = "form-control search-text", placeholder = isAzure ? "search string" : "Artist, Title, or Album", id = "search-text" })
+                    @html.TextBox("SearchString", filter.SearchString, new { @class = "form-control search-text", placeholder = "Artist, Title, Dance, Tags, etc...", id = "search-text" })
                     <span class="input-group-btn">
                         <button id="submit-search" class="btn btn-default" type="submit" style="margin-right: 15px"><span class="glyphicon glyphicon-search"></span></button>
                     </span>
