--- a/m4d/Views/Home/FAQ.cshtml
+++ b/m4d/Views/Home/FAQ.cshtml
@@ -90,7 +90,7 @@
                     <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
                         <div class="panel-body">
                             <p class="neutral">
-                                Check out the <a href="/dances/wedding-dance">wedding page</a> for information to help you get started,
+                                Check out the <a href="/dances/wedding-music">wedding page</a> for information to help you get started,
                                 or you can go to the <a href="/song/advancedsearchform">advanced search</a> page and look for songs that are tagged as First Dance and/or Wedding.
                             </p>
                             <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">Wedding Music Part I: Can we dance the Foxtrot to our song?</a> and <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</a></p>
