--- a/m4d/Views/Song/Create.cshtml
+++ b/m4d/Views/Song/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Song
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add Song";
     ViewBag.Action = "Create";
     ViewBag.Submit = "Create";
 }
 
-<h2>Create</h2>
+<h2>Add Song</h2>
 
 @Html.Partial("EditCore")
 
